2009-01-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Fix positioning of new-style menus. Old-style menus are positioned
	better, but not yet according to layout guide. Fixes: NB#92248

2009-01-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-decor.c:
	  Don't attempt to create 0-width decor windows.
	  Destroy the decor's XWindow along with the object.

2009-01-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo:
	* matchbox/core/mb-window-manager.c (mb_wm_unfocus_client): Focus next
	client that wants focus. Fixes: NB#93431

2009-01-22  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-app.c,
	matchbox/client-types/mb-wm-client-dialog.c,
	matchbox/client-types/mb-wm-client-menu.c,
	matchbox/client-types/mb-wm-client-override.c,
	matchbox/core/mb-window-manager.c,
	matchbox/core/mb-wm-atoms.c,
	matchbox/core/mb-wm-client-window.c:
	Implement Hildon stacking layers.

2009-01-21  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_repair_real): Always use bounding box
	since Clutter uses it as well.

2009-01-19  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Added documentation comments in Doxygen-friendly format.

	* matchbox/client-types/mb-wm-client-app.h:
	* matchbox/client-types/mb-wm-client-desktop.h:
	* matchbox/client-types/mb-wm-client-dialog.h:
	* matchbox/client-types/mb-wm-client-input.h:
	* matchbox/client-types/mb-wm-client-menu.h:
	* matchbox/client-types/mb-wm-client-note.h:
	* matchbox/client-types/mb-wm-client-override.h:
	* matchbox/client-types/mb-wm-client-panel.h:
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.h:
	* matchbox/comp-mgr/mb-wm-comp-mgr-xrender.c:
	* matchbox/comp-mgr/mb-wm-comp-mgr-xrender.h:
	* matchbox/comp-mgr/mb-wm-comp-mgr.h: