@@ -3,6 +3,10 @@
 	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
 	Fix positioning of new-style menus. Old-style menus are positioned
 	better, but not yet according to layout guide. Fixes: NB#92248
+	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.[ch]: Add support for
+	HdWmClientTypeAnimationActor to the texture workaround.
+	MBWMCompMgrClutterClientDontPosition and
+	MBWMCompMgrClutterClientDontPosition.
 
 2009-01-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
